@@ -178,6 +178,7 @@ bool qjackctlSetup::loadPreset ( qjackctlPreset& preset, const QString& sPreset 
     preset.iOutChannels = m_settings.readNumEntry("/OutChannels", 0);
     preset.iStartDelay  = m_settings.readNumEntry("/StartDelay", 2);
     preset.bVerbose     = m_settings.readBoolEntry("/Verbose", false);
+    preset.iPortMax     = m_settings.readNumEntry("/PortMax", 128);
     m_settings.endGroup();
 
     return true;
@@ -221,6 +222,7 @@ bool qjackctlSetup::savePreset ( qjackctlPreset& preset, const QString& sPreset 
     m_settings.writeEntry("/OutChannels", preset.iOutChannels);
     m_settings.writeEntry("/StartDelay",  preset.iStartDelay);
     m_settings.writeEntry("/Verbose",     preset.bVerbose);
+    m_settings.writeEntry("/PortMax",     preset.iPortMax);
     m_settings.endGroup();
 
     return true;
